<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/iphonewallpaper"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:src="@drawable/icon_shipper"
            android:contentDescription="@null"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asi_shipper"
            android:textColor="@color/colorWhite"
            android:textSize="32sp"
            android:layout_gravity="center"
            android:textStyle="bold"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtPhone"
            android:hint="@string/asi_phone"
            android:text="@string/asi_phone_number_val"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textSize="28sp"
            android:inputType="phone"
            app:met_baseColor="@color/colorWhite"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="13"
            app:met_primaryColor="@color/colorWhite"
            app:met_singleLineEllipsis="true"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtPassword"
            android:hint="@string/asi_password"
            android:text="@string/asi_password_val"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textSize="28sp"
            android:inputType="textPassword"
            app:met_baseColor="@color/colorWhite"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="12"
            app:met_primaryColor="@color/colorWhite"
            app:met_singleLineEllipsis="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

    <info.hoang8f.widget.FButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSignIn"
        android:text="@string/asi_sign_in_as_shipper"
        android:textColor="@color/colorWhite"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:fButtonColor="@color/fbutton_color_green_sea"
        app:shadowColor="@color/black"
        app:shadowEnabled="true"
        app:shadowHeight="5dp"
        app:cornerRadius="8dp"/>
    </LinearLayout>
</RelativeLayout>