<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:baselineAligned="false">

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="9"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/order_id"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical|start"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:text="@string/tv_order_id_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/order_date"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical|start"
                    android:textAllCaps="true"
                    android:textStyle="italic"
                    android:text="@string/tv_order_date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/order_status"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical|start"
                    android:textAllCaps="true"
                    android:textStyle="italic"
                    android:text="@string/tv_status_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/order_phone"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical|start"
                    android:textAllCaps="true"
                    android:textStyle="italic"
                    android:text="@string/tv_phone_number_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/order_address"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical|start"
                    android:textAllCaps="true"
                    android:textStyle="italic"
                    android:text="@string/tv_address_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:weightSum="1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <info.hoang8f.widget.FButton
                android:id="@+id/btnShipping"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/fbutton_shipping_text"
                android:textColor="@color/white"
                app:cornerRadius="0dp"
                app:fButtonColor="@android:color/white"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>